--- a/nicepage.css
+++ b/nicepage.css
@@ -34798,25 +34798,56 @@ a.u-link.u-text-hover-grey-90:hover {
 }
 
 .u-header .u-sheet-1 {
-  min-height: 69px;
+  min-height: 58px;
 }
 
 .u-header .u-image-1 {
-  width: 113px;
-  height: 67px;
-  margin: 2px auto 2px 0;
+  width: 108px;
+  height: 57px;
+  margin: 1px auto 1px 0;
+}
+
+.u-header .u-logo-image-1 {
+  width: 100%;
+  height: 100%;
 }
 .u-header .u-sheet-2 {
   min-height: 100px;
 }
-@media (max-width: 1199px) {
-  .u-header .u-image-1 {
-    width: 103px;
-    margin-top: 1px;
-    margin-bottom: -1px;
-  }
+
+.u-header .u-image-2 {
+  width: 80px;
+  height: 40px;
+  margin: 30px auto 0 0;
 }
 
+.u-header .u-logo-image-2 {
+  width: 100%;
+  height: 100%;
+}
+
+.u-header .u-menu-1 {
+  margin: -38px 0 32px auto;
+}
+
+.u-header .u-nav-1 {
+  font-size: 1rem;
+  letter-spacing: 0px;
+  font-weight: 700;
+}
+
+.u-header .u-nav-2 {
+  font-size: 1rem;
+  letter-spacing: 0px;
+  font-weight: 700;
+}
+
+@media (max-width: 1199px) {
+  .u-header .u-logo-image-2 {
+    max-width: 80px;
+    max-height: 80px;
+  }
+}
 
 
 
